[package]
name = "bevy_debug_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_debug"
path = "src/lib.rs"

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# bevy = { path = "vendor/bevy" }
bevy = { version = "0.5.0" }

bevy_spicy_networking = { git = "https://github.com/rezural/bevy_spicy_networking", branch = "standalone-network-client-0.5" }
# bevy_spicy_networking = { path = "vendor/bevy_spicy_networking" }
chrono = { version = "0.4", features = [ "serde" ] }
parry3d = { version = "0.7", features = ["serde-serialize"] }
# nalgebra = { version = "0.29", features = ["convert-mint"] }

serde = "1"
typetag = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"

structopt = { version = "0.3", default-features = false }
rand = "0.8"

# [patch.crates-io]
# bevy = { path = "vendor/bevy" }
# bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
# nalgebra = { version = "0.29" }

# [patch."https://github.com/bevyengine/bevy"]
# bevy = { path = "vendor/bevy" }
