[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
parry3d = { version = "0.7", features = ["serde-serialize"] }

threebug-core = {path = "../threebug-core" }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
bevy_spicy_networking = { git = "https://github.com/rezural/bevy_spicy_networking", branch = "standalone-network-client-0.5" }
rand = "0.8"
structopt = { version = "0.3", default-features = false }
