[package]
name = "threebug-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_spicy_networking = { git = "https://github.com/rezural/bevy_spicy_networking", branch = "standalone-network-client-0.5" }
chrono = { version = "0.4", features = [ "serde" ] }
serde = "1"
typetag = "0.1"
parry3d = { version = "0.7", features = ["serde-serialize"] }
